_sass/_layout.scss
/* Site header */
.site-header, .site-footer {
  border-bottom: 1px solid $base2;
  min-height: $spacing-unit * 3;
}

.site-title {	
  font-size: $base-font-size * 1.25;
  line-height: $spacing-unit * 3;
  margin-bottom: 0;
}

.site-nav {
  float: right;
  line-height: $spacing-unit * 3;

  .page-link {
  	display: inline-block;
    margin: 0;
    padding: 0 $spacing-unit;
    
    &:hover { background-color: $base2; }
  }
}

/* 40px top and bottom margins */
.about-excerpt, .portfolio-head, .button, h1, p {
  margin: ($spacing-unit * 2) 0;
}

/* About me on the home page */
.about-excerpt, .portfolio-head {
  border-bottom: 2px solid $base2;
  
  p {
    max-width: ($on-laptop + ($spacing-unit * 2)) / 1.618;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
  }
}

/* Site footer */
.footer-list {
  display: inline;
  margin: 0;
  list-style: none;
  
  li {
    float: left;
    margin-right: $spacing-unit / 4;
  }
}

.post-list {
  margin: 0;
  list-style: none;

  > li {
    border-bottom: 1px solid $base2;
    margin-top: $spacing-unit * 2;
    
    img { margin-bottom: $spacing-unit; }
    
    p { margin: 0; }
  }
}

.button {
  display: inline-block;
  background-color: $blue;
  color: #fff;
  padding: 0 $spacing-unit;
  border-radius: 4px;
  line-height: $spacing-unit * 3;
  
  &:visited { background-color: $blue; }
}

.post-link {
  display: block;
  line-height: 1;
  margin-bottom: $spacing-unit;
}

/* Posts */
.post-header { border-bottom: 2px solid $base2; }

